// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correcly closed 1`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-4:first-of-type {
  margin-top: 0;
}

.emotion-4:last-of-type {
  margin-bottom: 0;
}

.emotion-4:empty {
  display: none;
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #24252E;
  cursor: pointer;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
  margin-left: 0.5rem;
}

<body>
  <div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
        >
          <div
            aria-activedescendant=""
            aria-controls="test-menu-id"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="downshift-243-label"
            class="emotion-2"
            id="test-toggle-button-id"
            tabindex="0"
          >
            <span>
              <label
                class="emotion-0"
                for="test-toggle-button-id"
                id="downshift-243-label"
              >
                Fruits
              </label>
              <svg
                aria-hidden="true"
                class="emotion-1"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.294 8.294a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5.001-5a1 1 0 011.414-1.415l4.294 4.294 4.293-4.293z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      aria-invalid="false"
      aria-labelledby="downshift-243-label"
      id="test-menu-id"
      role="listbox"
      tabindex="-1"
    />
  </div>
</body>
`;

exports[`rendering renders correcly opened 1`] = `
.emotion-10 {
  padding: 0.5rem;
  border-bottom: 1px solid #D3D4DD;
}

.emotion-24 {
  overflow: auto;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-4:first-of-type {
  margin-top: 0;
}

.emotion-4:last-of-type {
  margin-bottom: 0;
}

.emotion-4:empty {
  display: none;
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #24252E;
  cursor: pointer;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
  margin-left: 0.5rem;
}

.emotion-9 {
  position: relative;
}

.emotion-9 input {
  padding-left: 2.5rem;
}

.emotion-8 {
  position: absolute;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  left: 1px;
}

.emotion-6 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-6[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-6:required {
  box-shadow: none;
}

.emotion-6::-webkit-input-placeholder {
  color: #696979;
}

.emotion-6::-moz-placeholder {
  color: #696979;
}

.emotion-6:-ms-input-placeholder {
  color: #696979;
}

.emotion-6::placeholder {
  color: #696979;
}

.emotion-6:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-6:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-6:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-7 {
  fill: currentColor;
  font-size: 1.5rem;
  border-radius: inherit;
}

.emotion-7:focus {
  box-shadow: none;
}

.emotion-23 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-11:last-of-type {
  border-bottom: none;
}

.emotion-11:hover {
  background: #F0F0F5;
}

.emotion-11:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<body>
  <div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
        >
          <div
            aria-activedescendant=""
            aria-controls="test-menu-id"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-labelledby="downshift-244-label"
            class="emotion-2"
            id="test-toggle-button-id"
            tabindex="0"
          >
            <span>
              <label
                class="emotion-0"
                for="test-toggle-button-id"
                id="downshift-244-label"
              >
                Fruits
              </label>
              <svg
                aria-hidden="true"
                class="emotion-1"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      aria-invalid="false"
      aria-labelledby="downshift-244-label"
      id="test-menu-id"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="emotion-25"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="menu"
        style="position: absolute; left: 0px; top: 0px; width: 0px; min-width: 12rem; transform: translate(0px, 0px);"
      >
        <div
          class="emotion-10"
        >
          <div
            class="emotion-9"
          >
            <input
              class="emotion-6"
              role="searchbox"
              type="search"
            />
            <span
              class="emotion-8"
            >
              <svg
                aria-hidden="true"
                class="emotion-7"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  clip-rule="evenodd"
                  d="M14.605 13.194l7 6.998a1 1 0 01-1.414 1.414h-.001l-6.997-7a7 7 0 111.412-1.412zM9 14A5 5 0 109 4a5 5 0 000 10z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="emotion-24"
          tabindex="-1"
        >
          <ul
            class="emotion-23"
            tabindex="-1"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-0"
              role="option"
            >
              Apple
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-1"
              role="option"
            >
              Avocado
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-2"
              role="option"
            >
              Banana
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-3"
              role="option"
            >
              Blueberry
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-4"
              role="option"
            >
              Coconut
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-5"
              role="option"
            >
              Grape
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-6"
              role="option"
            >
              Lemon
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-7"
              role="option"
            >
              Mango
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-8"
              role="option"
            >
              Melon
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-9"
              role="option"
            >
              Orange
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-10"
              role="option"
            >
              Peach
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-11"
              id="test-item-id-11"
              role="option"
            >
              Pear
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`rendering renders correcly opened and loading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.emotion-10 {
  padding: 0.5rem;
  border-bottom: 1px solid #D3D4DD;
}

.emotion-26 {
  overflow: auto;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-4:first-of-type {
  margin-top: 0;
}

.emotion-4:last-of-type {
  margin-bottom: 0;
}

.emotion-4:empty {
  display: none;
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #24252E;
  cursor: pointer;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
  margin-left: 0.5rem;
}

.emotion-9 {
  position: relative;
}

.emotion-9 input {
  padding-left: 2.5rem;
}

.emotion-8 {
  position: absolute;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  left: 1px;
}

.emotion-6 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-6[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-6:required {
  box-shadow: none;
}

.emotion-6::-webkit-input-placeholder {
  color: #696979;
}

.emotion-6::-moz-placeholder {
  color: #696979;
}

.emotion-6:-ms-input-placeholder {
  color: #696979;
}

.emotion-6::placeholder {
  color: #696979;
}

.emotion-6:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-6:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-6:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-7 {
  fill: currentColor;
  font-size: 1.5rem;
  border-radius: inherit;
}

.emotion-7:focus {
  box-shadow: none;
}

.emotion-25 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-13 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-13:last-of-type {
  border-bottom: none;
}

.emotion-13:hover {
  background: #F0F0F5;
}

.emotion-13:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-12 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
  background: #F0F0F5;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  cursor: initial;
}

.emotion-12:last-of-type {
  border-bottom: none;
}

.emotion-12:hover {
  background: #F0F0F5;
}

.emotion-12:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-11 {
  pointer-events: none;
  font-size: 1rem;
  line-height: 1;
  color: #0069D0;
  float: right;
}

.emotion-11:after {
  -webkit-animation: animation-0 450ms infinite linear;
  animation: animation-0 450ms infinite linear;
  border: 2px solid currentColor;
  border-radius: 50%;
  border-right-color: transparent;
  content: "";
  display: inline-block;
  height: 1rem;
  width: 1rem;
}

<body>
  <div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
        >
          <div
            aria-activedescendant=""
            aria-controls="test-menu-id"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-labelledby="downshift-257-label"
            class="emotion-2"
            id="test-toggle-button-id"
            tabindex="0"
          >
            <span>
              <label
                class="emotion-0"
                for="test-toggle-button-id"
                id="downshift-257-label"
              >
                Button text
              </label>
              <svg
                aria-hidden="true"
                class="emotion-1"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-busy="true"
      aria-invalid="false"
      aria-labelledby="downshift-257-label"
      id="test-menu-id"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="emotion-27"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="menu"
        style="position: absolute; left: 0px; top: 0px; width: 0px; min-width: 12rem; transform: translate(0px, 0px);"
      >
        <div
          class="emotion-10"
        >
          <div
            class="emotion-9"
          >
            <input
              class="emotion-6"
              role="searchbox"
              type="search"
            />
            <span
              class="emotion-8"
            >
              <svg
                aria-hidden="true"
                class="emotion-7"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  clip-rule="evenodd"
                  d="M14.605 13.194l7 6.998a1 1 0 01-1.414 1.414h-.001l-6.997-7a7 7 0 111.412-1.412zM9 14A5 5 0 109 4a5 5 0 000 10z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="emotion-26"
          tabindex="-1"
        >
          <ul
            class="emotion-25"
            tabindex="-1"
          >
            <li
              class="emotion-12"
            >
              Loading...
              <span
                class="emotion-11"
              />
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-0"
              role="option"
            >
              Apple
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-1"
              role="option"
            >
              Avocado
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-2"
              role="option"
            >
              Banana
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-3"
              role="option"
            >
              Blueberry
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-4"
              role="option"
            >
              Coconut
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-5"
              role="option"
            >
              Grape
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-6"
              role="option"
            >
              Lemon
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-7"
              role="option"
            >
              Mango
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-8"
              role="option"
            >
              Melon
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-9"
              role="option"
            >
              Orange
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-10"
              role="option"
            >
              Peach
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-13"
              id="test-item-id-11"
              role="option"
            >
              Pear
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`rendering renders correcly with custom components correctly 1`] = `
.emotion-10 {
  padding: 0.5rem;
  border-bottom: 1px solid #D3D4DD;
}

.emotion-39 {
  overflow: auto;
}

.emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-4:first-of-type {
  margin-top: 0;
}

.emotion-4:last-of-type {
  margin-bottom: 0;
}

.emotion-4:empty {
  display: none;
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-35 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
}

.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #24252E;
  cursor: pointer;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
  margin-left: 0.5rem;
}

.emotion-9 {
  position: relative;
}

.emotion-9 input {
  padding-left: 2.5rem;
}

.emotion-8 {
  position: absolute;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  left: 1px;
}

.emotion-6 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-6[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-6:required {
  box-shadow: none;
}

.emotion-6::-webkit-input-placeholder {
  color: #696979;
}

.emotion-6::-moz-placeholder {
  color: #696979;
}

.emotion-6:-ms-input-placeholder {
  color: #696979;
}

.emotion-6::placeholder {
  color: #696979;
}

.emotion-6:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-6:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-6:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-7 {
  fill: currentColor;
  font-size: 1.5rem;
  border-radius: inherit;
}

.emotion-7:focus {
  box-shadow: none;
}

.emotion-38 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-12 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-12:last-of-type {
  border-bottom: none;
}

.emotion-12:hover {
  background: #F0F0F5;
}

.emotion-12:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-37 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-36 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: #FFFFFF;
  border: 1px solid #696979;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0069D0;
  color: #FFFFFF;
  border: 1px solid #0069D0;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-36 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-36:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-36:focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-36:not(:disabled):hover {
  background-color: #F0F0F5;
}

.emotion-36:not(:disabled):hover {
  background-color: #0051A2;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #217B00;
}

<body>
  <div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
        >
          <div
            aria-activedescendant=""
            aria-controls="test-menu-id"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-labelledby="downshift-270-label"
            class="emotion-2"
            id="test-toggle-button-id"
            name="fruit"
            tabindex="0"
          >
            <span>
              <label
                class="emotion-0"
                for="test-toggle-button-id"
                id="downshift-270-label"
              >
                Fruit
              </label>
              <svg
                aria-hidden="true"
                class="emotion-1"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      aria-invalid="false"
      aria-labelledby="downshift-270-label"
      id="test-menu-id"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="emotion-40"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="menu"
        style="position: absolute; left: 0px; top: 0px; width: 0px; min-width: 12rem; transform: translate(0px, 0px);"
      >
        <div
          class="emotion-10"
        >
          <div
            class="emotion-9"
          >
            <input
              class="emotion-6"
              role="searchbox"
              type="search"
            />
            <span
              class="emotion-8"
            >
              <svg
                aria-hidden="true"
                class="emotion-7"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  clip-rule="evenodd"
                  d="M14.605 13.194l7 6.998a1 1 0 01-1.414 1.414h-.001l-6.997-7a7 7 0 111.412-1.412zM9 14A5 5 0 109 4a5 5 0 000 10z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="emotion-39"
          tabindex="-1"
        >
          <ul
            class="emotion-38"
            tabindex="-1"
          >
            <div
              style="background: rgb(240, 240, 245); padding: 0.25rem 0.5rem; cursor: initial;"
            >
              Prepend item
            </div>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-0"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Apple
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-1"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Avocado
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-2"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Banana
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-3"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Blueberry
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-4"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Coconut
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-5"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Grape
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-6"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Lemon
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-7"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Mango
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-8"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Melon
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-9"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Orange
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-10"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Peach
              </span>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="emotion-12"
              id="test-item-id-11"
              role="option"
            >
              <span
                class="emotion-11"
              >
                Custom 
                Pear
              </span>
            </li>
            <div
              style="background: rgb(240, 240, 245); padding: 0.25rem 0.5rem; cursor: initial;"
            >
              <div
                class="emotion-37"
              >
                <span
                  class="emotion-35"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quod modi, inventore quasi aut sed beatae corrupti repellendus minima voluptatem debitis, quibusdam repudiandae totam voluptatum odit.
                </span>
                <button
                  class="emotion-36"
                  data-testid="action-btn"
                  type="button"
                >
                  <span>
                    New item
                  </span>
                </button>
              </div>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;
